* blb - Search the bible at BlueLetterBible.org (from Brent Beardsley)
* thelist - Search evlot.org's thelist archives (from Sarah S.)
* evolt - Search evolt.org (from Sarah S.)
* htmlh - Search htmlhelp.com (from JB)
* wf - Search Watchman Fellowship for info on cults (from JB)
* bta - Search Betanews for new beta software (from Paul Hounshell)

Bug Fixes

* Installation script now sets approved shell extension registry key for WinNT and it's descendants (from Brent Beardsley)
* Fix for bug [ 643947 ] up/down keys incompatible with Japanese (from Gregg Tavares)

Modified Searches

* fe - now allows you to specify an extension name instead of only the first letter (from Matthew McDougal)
* configure - localized it and added Reload menu option, fixed bug when addons directory did not exist (from Brent Beardsley)
* amaz - added /referral switch for building referral links for Amazon
* ebay - added about, all, feedback, items, my, and user switches (from Darrick ? and Brent Beardsley)
* sf - added status switch (from Brent Beardsley)
* chap - updated to work again (from Sarah Sweeney)
* babel - updated to work again (from Brent Beardsley)
* aj updated Ask Jeeves search (from Sam Mulube)

Miscellaneous

* Corrected documentation in help for adding a local, user search.
* New holiday database - holidays.cs.xml for the Czech Republic (from Jiri Sedlacek)
* New holiday database - holidays.gb.xml for England and Wales (James Robertson)

-- What's new for 3.1.5 (December 15, 2002)

Enhancements

* Added "mozillacal" as an option for the defaultcal preference to bring up the Mozilla calendar (although it doesn't go to the selected date yet)
* Moved the Computer and Reference searches into menu subcategories.
* Added parseArgsEx and trimWhitespace functions for additional argument parsing capabilities (from Brent Beardsley)
* Added ability to change specify the first day of the week (from Harry-Anton Talvik)